SubBt/force-app/main/default/objects/Vendor_Review__c/Vendor_Review__c.object-meta.xml
<CustomObject>
    <label>Vendor Review</label>
    <nameField>
        <label>Vendor Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>