SubBt/force-app/main/default/objects/Vendor_Review__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Reviews</relationshipLabel>
    <relationshipName>Vendor_Scorecards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>