SubBt/force-app/main/default/objects/Vendor_Review__c/fields/of_Questions__c.field-meta.xml
<CustomField>
    <fullName>of_Questions__c</fullName>
    <label># of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>