SubBt/force-app/main/default/objects/Vendor_Review__c/fields/OldVendorId__c.field-meta.xml
<CustomField>
    <fullName>OldVendorId__c</fullName>
    <label>Old Vendor Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>