SubBt/force-app/main/default/objects/Vendor_Review__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Vendor_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>