SubBt/force-app/main/default/objects/Vendor_Review__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Vendor_Review_Lines__c.Score__c</summarizedField>
    <summaryForeignKey>Vendor_Review_Lines__c.Contract_Review__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>