SubBt/force-app/main/default/objects/Vendor_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contractor__c</columns>
    <columns>NAME</columns>
    <columns>Rating__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>